--- a/finalProject-6100.ipynb
+++ b/finalProject-6100.ipynb
@@ -8,7 +8,7 @@
     "## Executive Summary:\n",
     "\n",
     "This report is on the final project of the DATA*6100 course based on the movie recommendation system. \n",
-    "Thre aree four different datasest. The training dataset with columns userId, movieId, ratin,g and timestamp The given movie dataset of ratings given by users for a particular movie on a 0-5 star scale. .The test dataset with columns userId, movieI,d and timestamp .The movies dataset with columns movieId, titl,e and genres. The links dataset with columns movieId, imdbI,d and tmdbId.The main purpose of this project is to build a user-based collaborative system and predict movie ratings. Apart from that a content-based movie recommendation system and a recommendation for new users have been done in this project.\n",
+    "There are four different datasets. The training dataset with columns userId, movieId, rating, and timestamp The given movie dataset of ratings given by users for a particular movie on a 0-5 star scale. The test dataset with columns userId, movieId, and timestamp.The movies dataset with columns movieId, title, and genres. The links dataset with columns movieId, imdbId, and tmdbId.The main purpose of this project is to build a user-based collaborative system and predict movie ratings. Apart from that a content-based movie recommendation system and a recommendation for new users have been done in this project.\n",
     "\n",
     "Here is the brief of the code:\n",
     "\n",
@@ -16,12 +16,12 @@
     "\n",
     "In the data pre-processing step, one-hot encoding was used to extract the features.\n",
     "\n",
-    "In collaborative filtering, cosine similarity was used to measure the similarity between user vectors in the user-item interaction matrix. The resulting similarity matrix was used to identify similar movies for recommendation purposes. I in user-based collaborative filtering, the user vectors represent users based on their ratings fomoviesms, and cosine similarity can be calculated to find users with similar preferences.A movie rating prediction was done using the Singular Value Decomposition (SVD) from the surprise library. 3-fold cross-validation was on the training dataset to calculate Mean Squared Error (MSE), Root Mean Squared Error (RMSE), and Mean Absolute Error (MAE). Then the prediction was done on the test dataset. Moreover, the train_test_split() method was used to estimate the Mean Squared Error (MSE), Root Mean Squared Error (RMSE) of the Mean Squared Error (MSE), Root Mean Squared Error (RMSE).\n",
+    "In collaborative filtering, cosine similarity was used to measure the similarity between user vectors in the user-item interaction matrix. The resulting similarity matrix was used to identify similar movies for recommendation purposes. In user-based collaborative filtering, the user vectors represent users based on their ratings for movies, and cosine similarity can be calculated to find users with similar preferences. A movie rating prediction was made using the Singular Value Decomposition (SVD) from the surprise library. 3-fold cross-validation was on the training dataset to calculate Mean Squared Error (MSE), Root Mean Squared Error (RMSE), and Mean Absolute Error (MAE). Then the prediction was done on the test dataset. Moreover, the train_test_split() method was used to estimate the Mean Squared Error (MSE), Root Mean Squared Error (RMSE) of the Mean Squared Error (MSE), Root Mean Squared Error (RMSE).\n",
     "\n",
     "Final Score:\n",
     "\n",
     "Mean Squared Error (MSE): 77.60%\n",
-    "Root Mean Squared Error (RMSE): 88.09%ed."
+    "Root Mean Squared Error (RMSE): 88.09%."
    ]
   },
   {
